# Space

./: .gitmodules  CMakeLists.txt  readme.md
subprojects/: CMakeLists.txt
subprojects/client/: CMakeLists.txt  main.cpp
subprojects/client/include/: action.h  canvas.h  connection.h  focus.h  interaction.h  interface.h  painter.h  resources.h  shortcut.h  slave.h  space.h  state.h  tool.h
subprojects/client/source/: action.cpp  canvas.cpp  connection.cpp  focus.cpp  interaction.cpp  interface.cpp  painter.cpp  resources.cpp  shortcut.cpp  slave.cpp  space.cpp  state.cpp
subprojects/common/: CMakeLists.txt
subprojects/common/include/: command.h  defs.h  packet.h  primitive.h
subprojects/common/rpc/: common.rpc
subprojects/common/source/: packet.cpp
subprojects/server/: CMakeLists.txt  main.cpp
